# qrzbot

./: .gitignore  .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml  qrzbot-config.toml
misc/: gen-extra-questions.csv
qrzbot/: __init__.py  _qrzbot.py  gen_qrzbot_db.py  quiz.py  tools.py
